# ff14-craft-helper

./: .gitignore  .impeccable.md  CLAUDE.md  CONTEXT.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  snapshot.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: PLAN-remove-tnze-api.md  feature_request_from_be4r.md  ga-snapshot-setup.md  mobile_ux_improvemen.md  mockup-batch-view.html  to_buy_list_optimization.md  to_buy_list_optimization_v2.md
e2e/: meld-canhq.spec.ts  meld-flow.spec.ts  meld-market.spec.ts  meld-reverse.spec.ts  smoke.spec.ts
history/: 2026-05-19.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  (+25 more)
public/: about-section-preview.html  (+8 more)
raphael-wasm-wrapper/: Cargo.toml  build.sh
raphael-wasm-wrapper/.cargo/: config.toml
raphael-wasm-wrapper/src/: lib.rs
(+434 files in other folders)
