[package]
name = "raphael-wasm-wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
raphael-sim = { git = "https://github.com/KonaeAkira/raphael-rs", features = ["serde"] }
raphael-solver = { git = "https://github.com/KonaeAkira/raphael-rs", features = ["serde"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rayon = "1.11"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
